--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
